--- a/index.html
+++ b/index.html
@@ -4,11 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web developer portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@400;500;600;900&family=Kanit:ital,wght@1,100&family=Open+Sans:wght@400;600;800&family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/style/style.css">
 </head>
 <body>
-    <header>
-
+    <header class="header">
+        <nav>
+            <h3 class="nav-title">Riaj<span class="primary-color">u</span>l.</h3>
+            <ul>
+                <li><a href="">Portfolio</a></li>
+                <li><a href="">Blog</a></li>
+                <li><button class="btn-primary">Contact</button></li>
+            </ul>
+        </nav>
+        <div class="banner">
+            <diV>
+                <h3 class="banner-title">Hi, I am</h3>
+                <h1>Riajul Islam</h1>
+                <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <button class="btn-primary">Download cv</button>
+                <button class="btn-primary">Contact</button>
+            </diV>
+        </div>
     </header>
     <main>
 
